--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/caramelo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script>
+      window._AT = window._AT || {};
+      window._AT.config = Object.assign({}, window._AT.config, {
+        checkAllowedOrigin: false,
+      });
+    </script>
+    <script>
+      var digitalData = {
+        page: {
+          pageInfo: {
+            pageName: "Home",
+          },
+        },
+      };
+    </script>
+    <!--/Data Layer-->
+    <!-- targetPageParams(), targetPageParamsAll(), Data Providers or targetGlobalSettings() functions to enrich the visitor profile or modify the library settings-->
+    <script>
+      targetPageParams = function () {
+        return {
+          a: 1,
+          b: 2,
+          pageName: digitalData.page.pageInfo.pageName,
+          profile: {
+            test: "test",
+            country: {
+              city: "Bucharest",
+            },
+          },
+        };
+      };
+    </script>
+    <!--/targetPageParams()-->
+    <script src="%PUBLIC_URL%/scripts/at-taasqa1-spa.js"></script>
+
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Target SPA website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -20,11 +52,11 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      Unlike "/caramelo.jpg" or "caramelo.jpg", "%PUBLIC_URL%/caramelo.jpg" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Target SPA website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
