Changed cookie domain for Vercel

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
         checkAllowedOrigin: false,
       });
       window.targetGlobalSettings = {
-        cookieDomain: "tgt-spa.github.io", // set cookies on the subdomain
+        // cookieDomain: "tgt-spa.github.io", // set cookies on the subdomain
+        cookieDomain: "spa-six.vercel.app",
+        // cookieDomain: "awesome-stonebraker-95ee14.netlify.app/",
       };
     </script>
     <script>
