--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,7 @@
         // cookieDomain: "awesome-stonebraker-95ee14.netlify.app/",
       };
     </script>
-    <script>
-      var digitalData = {
-        page: {
-          pageInfo: {
-            pageName: "Home",
-          },
-        },
-      };
-    </script>
+
     <!--/Data Layer-->
     <!-- targetPageParams(), targetPageParamsAll(), Data Providers or targetGlobalSettings() functions to enrich the visitor profile or modify the library settings-->
     <script>
@@ -31,7 +23,7 @@
         return {
           a: 1,
           b: 2,
-          pageName: digitalData.page.pageInfo.pageName,
+          at_property: "8757f595-1143-b75b-c7c8-111fc7a4cc6d",
           profile: {
             test: "test",
             country: {
