Changed targetPageParams to targetPageParamsAll and corrected typo

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <!--/Data Layer-->
     <!-- targetPageParams(), targetPageParamsAll(), Data Providers or targetGlobalSettings() functions to enrich the visitor profile or modify the library settings-->
     <script>
-      targetPageParams = function () {
+      targetPageParamsAll = function () {
         return {
           a: 1,
           b: 2,
